feature (refs T29879): add addon permission support (WIP)
DiPlanung ADO Ticketnummer: 1740

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -307,8 +307,14 @@ services:
 
     demosplan\DemosPlanCoreBundle\Permissions\PermissionsInterface:
         arguments:
+            $addonPermissions: !dplan.permission_collection
+            $corePermissions: demosplan\DemosPlanCoreBundle\Permissions\CachingYamlPermissionCollection
             $logger: '@monolog.logger.dplan'
-            $permissionCollection: demosplan\DemosPlanCoreBundle\Permissions\CachingYamlPermissionCollection
+
+    demosplan\DemosPlanCoreBundle\Permissions\ResolvablePermissionCollection:
+        shared: false
+        tags:
+            - { name: "dplan.permission_collection" }
 
     demosplan\DemosPlanCoreBundle\Resources\config\GlobalConfig: ~
 
