check if secrets key is case sensitive

--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -12,4 +12,4 @@ jobs:
     with:
         gpg_user_name: Demos-CI
     secrets:
-        gpg_email: ${{ secrets.DEVOPS_GPG_EMAIL }}
+        GPG_EMAIL: ${{ secrets.DEVOPS_GPG_EMAIL }}
