--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,6 @@ steps:
   workingDirectory: $(System.DefaultWorkingDirectory)
 
 - script: |
-   git push --dry-run -v https://gitlab-ci-token:$OPENCODE_PAT@gitlab.opencode.de/diplanung/diplanbeteiligung/diplanbeteiligung.git
+   git push --dry-run -v https://gitlab-ci-token:$(OPENCODE_PAT)@gitlab.opencode.de/diplanung/diplanbeteiligung/diplanbeteiligung.git
   displayName: 'push to opencode'
   workingDirectory: $(System.DefaultWorkingDirectory)
