using switch - in checkout step

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,7 @@ steps:
 
 
 - script: |
+   git switch -
    git log
   displayName: 'checkout release'
   workingDirectory: $(System.DefaultWorkingDirectory)
