Feat (ref: T30254): adjust use statements
(ADO 1740)

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -1138,5 +1138,8 @@ services:
         calls:
             - [ 'setPropertyAccessor', ['@demosplan\DemosPlanCoreBundle\Logic\NullablePropertyAccessor'] ]
 
+    DemosEurope\DemosplanAddon\Validator\JsonSchemaValidator: ~
+
+
     # HEY YOU, YES YOU! STOP! Please follow the alphabetical order and
     # do NOT just add new code to the end of this file.
