--- a/composer.json
+++ b/composer.json
@@ -138,6 +138,7 @@
         "liip/functional-test-bundle": "^4",
         "liip/test-fixtures-bundle": "^2.0.1",
         "php-parallel-lint/php-console-highlighter": "^0.5",
+        "phpcompatibility/php-compatibility": "^9.3",
         "phpspec/prophecy": "^1.15",
         "phpstan/phpstan": "^0.12",
         "phpstan/phpstan-symfony": "^0.12",
@@ -192,5 +193,9 @@
     },
     "conflict": {
       "twig/twig": "<2.10"
+    },
+    "scripts": {
+      "post-install-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility",
+      "post-update-cmd" : "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility"
     }
 }
