--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "demos-europe/edt-extra": "^0.14.0",
         "demos-europe/edt-jsonapi": "^0.14.0",
         "demos-europe/edt-paths": "^0.14.0",
-        "demos-europe/demosplan-addon": "dev-Feat_ref_T30254_add_contracts_part2",
+        "demos-europe/demosplan-addon": "dev-main",
         "doctrine/annotations": "^1.13",
         "doctrine/common": "^3.2",
         "doctrine/doctrine-bundle": "^2",
