--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -24,6 +24,33 @@ services:
         arguments:
             $objectPersister: '@fos_elastica.object_persister.procedures.procedure'
 
+
+            #################################
+
+
+    DemosEurope\DemosplanAddon\Controller\APIController:
+        arguments:
+            $resourceTypeProvider: '@demosplan\DemosPlanCoreBundle\Logic\ApiRequest\PrefilledResourceTypeProvider'
+
+    EDT\Wrapping\TypeProviders\PrefilledTypeProvider:
+        alias: 'demosplan\DemosPlanCoreBundle\Logic\ApiRequest\PrefilledResourceTypeProvider'
+
+    DemosEurope\DemosplanAddon\Contracts\MessageBagInterface :
+        alias: 'demosplan\DemosPlanCoreBundle\Logic\MessageBag'
+
+    EDT\Wrapping\Utilities\TypeAccessors\AbstractProcessorConfig:
+
+    EDT\Wrapping\Contracts\TypeProviderInterface:
+        alias: 'demosplan\DemosPlanCoreBundle\Logic\ApiRequest\PrefilledResourceTypeProvider'
+
+    EDT\Wrapping\Contracts\Types\TypeInterface: ~
+
+
+
+
+
+        ##########################################
+
     demosplan\DemosPlanCoreBundle\DataCollector\ConfigParametersDataCollector:
         tags:
             -   name: data_collector
@@ -305,9 +332,10 @@ services:
             $path: !php/const 'demosplan\DemosPlanCoreBundle\Permissions\Permissions::PERMISSIONS_YML'
             $cacheKey: 'permissionsYml'
 
-    demosplan\DemosPlanCoreBundle\Permissions\PermissionsInterface:
+
+    demosplan\DemosPlanCoreBundle\Permissions\Permissions:
         arguments:
-            $addonPermissions: !dplan.permission_collection
+            $addonPermissions: !tagged_iterator dplan.permission_collection
             $corePermissions: demosplan\DemosPlanCoreBundle\Permissions\CachingYamlPermissionCollection
             $logger: '@monolog.logger.dplan'
 
