add missing use statement
(ADO 1740)

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -45,6 +45,8 @@ services:
 
     EDT\Wrapping\Contracts\Types\TypeInterface: ~
 
+    demosplan\DemosPlanCoreBundle\Entity\EntityInterface: ~
+
 
 
 
