Fix (ref:T30254): add argument in config_test yaml
- update composer lock

(ADO 1740)

--- a/tests/backend/core-application/app/config/config_test.yml
+++ b/tests/backend/core-application/app/config/config_test.yml
@@ -49,6 +49,8 @@ services:
         autoconfigure: true
 
     Tests\CoreApplication\Permissions\Permissions:
+        arguments:
+            $addonPermissions: !tagged_iterator dplan.permission_collection
 
     demosplan\DemosPlanCoreBundle\Permissions\PermissionsInterface:
         '@Tests\CoreApplication\Permissions\Permissions'
