--- a/composer.json
+++ b/composer.json
@@ -130,8 +130,7 @@
         "willdurand/js-translation-bundle": "~5.0",
         "wrep/daemonizable-command": "^3.0",
         "wsdltophp/packagegenerator": "^3.0",
-        "yectep/phpspreadsheet-bundle": "^1.0.0",
-        "demos-europe/demosplan-addon": "dev-main"
+        "yectep/phpspreadsheet-bundle": "^1.0.0"
     },
     "require-dev": {
         "escapestudios/symfony2-coding-standard": "^3.4",
