feature (ADO 1740): restructure permission initialization
Permissions will be now fetched by the core and evaluated
there. `PermissionEvaluator` instances beside the one
provided by the core were removed.

Addons are now allowed to evaluate any permission
(via the core `PermissionEvaluator`), even if it was
defined by an addon the evaluating one did not define
as dependency.

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -325,12 +325,9 @@ services:
 
     demosplan\DemosPlanCoreBundle\Permissions\Permissions:
         arguments:
-            $addonPermissions: !tagged_iterator dplan.permission_collection
+            $addonInfoProviders: !tagged_iterator { tag: 'dplan.addon_info_provider', default_index_method: 'getAddonIdentifier' }
             $corePermissions: '@demosplan\DemosPlanCoreBundle\Permissions\CachingYamlPermissionCollection'
             $logger: '@monolog.logger.dplan'
-
-    demosplan\DemosPlanCoreBundle\Permissions\ResolvablePermissionCollection:
-        shared: false
 
     demosplan\DemosPlanCoreBundle\Resources\config\GlobalConfig: ~
 
