--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "source-map-loader": "^4.0.1",
     "stylelint": "^14.16.0",
     "stylelint-config-standard-scss": "^6.1.0",
+    "terser-webpack-plugin": "^5.3.6",
     "util": "^0.12.4",
     "vue-loader": "^15.10.1",
     "vue-style-loader": "~4.1.3",
