--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -514,11 +514,11 @@ services:
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
         lazy: true
 
-    demosplan\DemosPlanHelpBundle\Logic\HelpHandler:
+    demosplan\DemosPlanCoreBundle\Logic\Help\HelpHandler:
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreHandler
 
-    demosplan\DemosPlanHelpBundle\Logic\HelpService:
+    demosplan\DemosPlanCoreBundle\Logic\Help\HelpService:
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
         lazy: true
 
