feat(refs T30603): corrects used namespaces for moved classes

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -570,15 +570,15 @@ services:
         tags:
             -   name: dplan.json_api_transformer
 
-    demosplan\DemosPlanNewsBundle\Logic\ProcedureNewsService:
+    demosplan\DemosPlanCoreBundle\Logic\News\ProcedureNewsService:
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
         lazy: true
 
-    demosplan\DemosPlanNewsBundle\Logic\GlobalNewsHandler:
+    demosplan\DemosPlanCoreBundle\Logic\News\GlobalNewsHandler:
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreHandler
         lazy: true
 
-    demosplan\DemosPlanNewsBundle\Logic\NewsHandler:
+    demosplan\DemosPlanCoreBundle\Logic\News\NewsHandler:
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreHandler
 
