--- a/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
@@ -9,7 +9,7 @@ services:
     demosplan\DemosPlanCoreBundle\Repository\SegmentRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\Segment'
 
-    demosplan\DemosPlanNewsBundle\Repository\NewsRepository:
+    demosplan\DemosPlanCoreBundle\Repository\NewsRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\News\News'
 
     demosplan\DemosPlanCoreBundle\Repository\RoleRepository:
