feat: keep flysystem on 2.5 to avoid bc breaks

--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,7 @@
         "knpuniversity/oauth2-client-bundle": "^2.10",
         "lcobucci/jwt": "^3.4",
         "league/flysystem-bundle": "^2.0",
+        "league/flysystem": "2.5",
         "league/fractal": "^0.19",
         "league/html-to-markdown": "^5.0",
         "lexik/jwt-authentication-bundle": "^2.8",
