feat: use addon as a bundle
this way most of the service definitions can be put into the addon-bundle. Except for three that needed to be handled manually (I don't know why tbh). Since these 3 definitions involve the core and the addon-bundle, I would see these being part of the core.

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -1145,6 +1145,9 @@ services:
         calls:
             - [ 'setPropertyAccessor', ['@demosplan\DemosPlanCoreBundle\Logic\NullablePropertyAccessor'] ]
 
+    DemosEurope\DemosplanAddon\Contracts\MessageBagInterface: '@demosplan\DemosPlanCoreBundle\Logic\MessageBag'
+    DemosEurope\DemosplanAddon\Contracts\ApiClientInterface: '@demosplan\DemosPlanCoreBundle\Logic\GuzzleApiClient'
+    DemosEurope\DemosplanAddon\Permission\Validation\PermissionFilterValidatorInterface: '@demosplan\DemosPlanCoreBundle\Permissions\PermissionResolver'
 
     # HEY YOU, YES YOU! STOP! Please follow the alphabetical order and
     # do NOT just add new code to the end of this file.
