feat: use hostname instead of ip

--- a/demosplan/DemosPlanCoreBundle/Resources/config/config_dev_container.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/config_dev_container.yml
@@ -13,7 +13,7 @@ parameters:
 
     is_shared_folder: true
 
-    mailer_dsn: "smtp://172.22.255.1:1025"
+    mailer_dsn: "smtp://mailhog:1025"
 
     https_only: false
 
